# ColorSpace

./: CMakeLists.txt  LICENSE  README.md
src/: chromaticity.ixx  colorspace-aces.cxx  colorspace-aces.ixx  colorspace-adobe.cxx  colorspace-adobe.ixx  colorspace-dcip3.cxx  colorspace-dcip3.ixx  colorspace-rgb.ixx  colorspace-srgb.cxx  colorspace-srgb.ixx  colorspace-whitepoints.ixx  colorspace.ixx  colorspace.xyz-adaptation.ixx  colorspace.xyz-cs.ixx  colorspace.xyz.aliases.ixx  colorspace.xyz.cxx  colorspace.xyz.ixx  main.cpp  math.ixx  spectrum-cie.ixx  spectrum-coefficient.ixx  spectrum-iterator.ixx  spectrum-rgb.ixx  spectrum-sampled.ixx  spectrum-shape.ixx  spectrum-spd.ixx  spectrum.blackbody.ixx  spectrum.debug.ixx  spectrum.ixx
